@@ -1116,21 +1116,33 @@ when we implement the mailcap parser to set `w3m-content-type-alist'.")
 	  (if (and (eq system-type 'windows-nt) (w3m-which-command "fiber"))
 	      'w3m-w32-browser-with-fiber
 	    (or (when (condition-case nil (require 'browse-url) (error nil))
-		  (if (or (not (boundp 'browse-url-browser-function))
-			  (eq 'w3m-browse-url
-			      (symbol-value 'browse-url-browser-function)))
-		      (cond
-		       ((and (memq system-type '(windows-nt ms-dos cygwin))
-			     (fboundp 'browse-url-default-windows-browser))
-			'browse-url-default-windows-browser)
-		       ((and (memq system-type '(darwin))
-			     (fboundp 'browse-url-default-macosx-browser))
-			'browse-url-default-macosx-browser)
-		       ((fboundp 'browse-url-default-browser)
-			'browse-url-default-browser)
-		       ((fboundp 'browse-url-netscape)
-			'browse-url-netscape))
-		    (symbol-value 'browse-url-browser-function)))
+		  (let ((default
+			  (cond
+			   ((and (memq system-type '(windows-nt ms-dos cygwin))
+				 (fboundp 'browse-url-default-windows-browser))
+			    'browse-url-default-windows-browser)
+			   ((and (memq system-type '(darwin))
+				 (fboundp 'browse-url-default-macosx-browser))
+			    'browse-url-default-macosx-browser)
+			   ((fboundp 'browse-url-default-browser)
+			    'browse-url-default-browser)
+			   ((fboundp 'browse-url-netscape)
+			    'browse-url-netscape))))
+		    (if (or (not (boundp 'browse-url-browser-function))
+			    (eq 'w3m-browse-url
+				(symbol-value 'browse-url-browser-function)))
+			default
+		      (if (symbolp browse-url-browser-function)
+			  (symbol-value 'browse-url-browser-function)
+			(catch 'browser
+			  (let ((alist browse-url-browser-function))
+			    (while alist
+			      (when (string-match (caar alist) "index.html")
+				(throw 'browser (cdar alist)))
+			      (setq alist (cdr alist)))
+			    (message "Found no html handler in \
+browse-url-browser-function to put in w3m-content-type-alist.")
+			    default))))))
 		(when (w3m-which-command "netscape")
 		  (list "netscape" 'url)))))
 	 (image-viewer (or fiber-viewer
